--- a/차량지능기초_과제_1.ipynb
+++ b/차량지능기초_과제_1.ipynb
@@ -1489,7 +1489,7 @@
     "link : https://github.com/seok-jong/Introduction-to-Intelligence-for-Vehichles\n",
     "\n",
     "3. Self-driving cars Road Segmentation Task 실행 코드 ( jupyter note book)\n",
-    "link : "
+    "link : https://github.com/seok-jong/Introduction-to-Intelligence-for-Vehichles/blob/master/%EC%B0%A8%EB%9F%89%EC%A7%80%EB%8A%A5%EA%B8%B0%EC%B4%88_%EA%B3%BC%EC%A0%9C_1.ipynb"
    ]
   }
  ],
